server_first_time playbook works; server_setup is getting there.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -23,7 +23,10 @@
 
 # Avoid DEPRECATED warning? seen in https://github.com/geosolutions-it/C106-2017/issues/17
 # Not turned on, though 4Apr2020 REB
-#INTERPRETER_PYTHON=auto
+INTERPRETER_PYTHON=auto_legacy
+
+# ignore deprecation warnings for atl.richb-hanover.com 4Apr2020 -reb
+deprecation_warnings=False 
 
 # Plays will gather facts by default, which contain information about
 # the remote system.
