--- a/setup_accounts.yml
+++ b/setup_accounts.yml
@@ -1,36 +1,58 @@
 ---
 
-# Use this playbook to set up accounts on a new server. 
-# it assumes the server has one user account with root privileges
-
-# The script prompts (twice) for the password for the 'deploy' account
-
-# Tasks
-#  1. Log into the target server using the root SSH password (not public key)
-#  2. Create a 'deploy' user, set up a SSH public key, make sudo'able
-#  3. Disallow password login for all accounts
-#  4. Disallow root ssh access
-#  5. (Leave ssh port set to default of 22)
-
+##############################################################
+#
+# setup_accounts.yml
+#
+# This Ansible playbook configures the accounts for an initial
+#   connection to a newly provisioned VPS. It performs the following tasks:
+#
+#  1. Log into the target server using the root password (not public key)
+#  2. Create a 'deploy' user
+#  3. Install the SSH public key from your account/home directory
+#  4. Add 'deploy' to /etc/sudoers to enable sudo access
+#  5. Disallow password login for all accounts
+#  6. Disallow root ssh access
+#  7. (Leave ssh port set to default of 22 - commented out)
+#
+# The script ssh's into the host and uses the root password for 
+#   authentication. It can never be re-run on the host because
+#   passwords and root access are both disallowed.
+#
+# You only need to run this playbook one time for a new VPS. After that
+#   all future connections to the host should use the 'deploy' user.
+# 
+# ----------------
+#
+# To run the script, enter the following command:
+#
+# ansible-playbook -i "hostname," setup_accounts.yml -k  
+#
+# Substitute the hostname as needed (keep the trailing comma (",").
+# You will be prompted to enter the root password, then you will be
+#   prompted to enter a password (twice) for the 'deploy' user.
+#
+# If you see "Please add this host's fingerprint to your known_hosts file"
+#   you need to ssh root@hostname one time to set the fingerprint. 
+#   Then re-run the ansible-playbook command (above)
+# 
+# ----------------
+#
+# Copyright (c) 2020 Rich Brown
+# Blueberry Hill Software 
+# rich.brown@blueberryhillsoftware.com
+# GPL v2 - use it, enjoy it, and let me know if it helps!
+#
 # Provenance: Original ideas came from:
 # https://github.com/jedelman8/server-build-ansible/blob/master/server_one_time_run.yml
 # referred from http://jedelman.com/home/server-bootstrap-prep-with-ansible/
 # Seasoned with info from Ryan Eschinger's first-time setup
-
-##############################################################
-# this playbook needs to be run with -k to ask for the SSH password (no public key)
+# Those playbooks needed to be refreshed for the (current) Ansible 2.9 syntax
+# Tested with Ansible 2.9.6 - 6Apr2020 
 #
-# ansible-playbook -i "hostname," setup_accounts.yml -k  
-#
-# If this fails with "Please add this host's fingerprint to your known_hosts file"
-#   you need to ssh root@hostname one time to set the fingerprint. 
-#   Then re-run the playbook
 ##############################################################
 
-# 
-
-
-- name: Set Up Accounts (only run this once)
+- name: Set Up Accounts on a New Host (First run - never again)
   hosts: all
   gather_facts: no
   remote_user: root
@@ -45,10 +67,9 @@
 
   vars:
       ubuntu_common_deploy_user_name: deploy
-      ubuntu_common_deploy_public_keys:
-        - ~/.ssh/id_rsa.pub
-#      ubuntu_common_ssh_port: 22
-      hashed_password:  "{{ deploy_password | password_hash('sha512', 'secretsalt') }}"
+      hashed_password:  "{{ deploy_password | password_hash('sha512') }}"
+      copy_of_my_ssh_key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_rsa.pub') }}"
+#     ubuntu_common_ssh_port: 22
 
   tasks:
 
@@ -64,11 +85,11 @@
   - name: 'Add deploy user'
     user: name={{ ubuntu_common_deploy_user_name }} password="{{ hashed_password }}" shell=/bin/bash
 
-  - name: 'Add authorized key taken from richb public key'
+  - name: 'Add authorized key taken from HOME public key'
     authorized_key:
       user: deploy
       state: present
-      key: "{{ lookup('file', '/Users/richb/.ssh/id_rsa.pub') }}"
+      key: "{{ copy_of_my_ssh_key }}"
 
   - name: 'Add deploy user to sudoers'
     lineinfile: dest=/etc/sudoers
