Editorial tweaks for publishing

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -25,7 +25,7 @@
 # Not turned on, though 4Apr2020 REB
 INTERPRETER_PYTHON=auto_legacy
 
-# ignore deprecation warnings for atl.richb-hanover.com 4Apr2020 -reb
+# ignore deprecation warnings 
 deprecation_warnings=False 
 
 # Plays will gather facts by default, which contain information about
